# strela-rs

./: Cargo.toml
src/: main.rs  render.rs
