[package]
name = "strela-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = {version = "0.29.1", feature = ["wgpu"]}
# egui_dock = "0.12.0"
eframe = {version = "0.29.1", default-features = false, features = ["wgpu", "persistence"]}
egui-wgpu = "0.29.1"
egui_tiles = "0.10.1"
log = { version = "0.4.22", features = ["std"] }
env_logger = "0.11.5"
# bytemuck = { version = "1.7.1", optional = true }
bytemuck = "1.18.0"
rfd = "0.15.0"
single_value_channel = "1.2.2"
crossbeam-channel = "0.5.13"
nalgebra-glm = "0.19.0"
anyhow = "1.0.89"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

# [features]
# default = ["wgpu"]
